# tacks

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: AGENTS.md  settings.json  team.yaml
.claude/agents/: bdd.md  code-reviewer.md  core-dev.md  db-agent.md  debugger.md
.claude/rules/: commits.md  definition-of-done.md  rust.md  stability.md  testing.md
.claude/skills/: blossom.md  distill.md  gather.md  handoff.md  rank.md  retro.md  review.md  status.md
memory/agents/bdd/: learnings.md
memory/agents/core-dev/: learnings.md
memory/agents/db/: learnings.md
memory/team/: decisions.md  retro-history.md
src/: lib.rs  main.rs
src/commands/: blocked.rs  children.rs  close.rs  comment.rs  create.rs  dep.rs  epic.rs  init.rs  list.rs  mod.rs  prime.rs  ready.rs  show.rs  stats.rs  update.rs
src/db/: mod.rs
src/models/: mod.rs
src/web/: errors.rs  handlers.rs  mod.rs
static/: app.css  app.js
templates/: base.html  board.html  epic_detail.html  epics.html  index.html  task_detail.html  task_detail_fragment.html  task_new.html  tasks_list.html
tests/bdd/: main.rs
tests/bdd/steps/: agent_steps.rs  blocked_steps.rs  children_steps.rs  close_guard_steps.rs  common_steps.rs  dep_steps.rs  epic_status_steps.rs  epic_steps.rs  filter_steps.rs  inline_edit_steps.rs  mod.rs  notes_steps.rs  parent_filter_steps.rs  task_steps.rs  web_api_steps.rs  web_steps.rs
tests/features/: agent_commands.feature  blocked.feature  board_drag_drop.feature  children.feature  close_guard.feature  close_reason.feature  dependencies.feature  epic_status.feature  epic_tagging.feature  filtering.feature  inline_edit.feature  notes.feature  parent_filter.feature  serve.feature  task_lifecycle.feature  web_api.feature  web_views.feature
