[package]
name = "tacks"
version = "0.1.0"
edition = "2024"
description = "Lightweight task manager for AI coding agents"
license = "MIT"

[[bin]]
name = "tk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tabled = "0.17"
colored = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
harness = false

[profile.release]
strip = true
lto = true
