[package]
name = "tacks"
version = "0.1.1"
edition = "2024"
description = "Lightweight task manager for AI coding agents"
license = "MIT"
repository = "https://github.com/srmccray/tacks"
keywords = ["task-manager", "cli", "ai-agent", "sqlite", "local"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".claude/", "AGENTS.md", "CLAUDE.md", "memory/"]

[lib]
name = "tacks"
path = "src/lib.rs"

[[bin]]
name = "tk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tabled = "0.17"
colored = "3"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
askama = "0.13"
axum-htmx = "0.6"
rust-embed = "8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
cucumber = "0.21"
reqwest = { version = "0.12", features = ["json"] }

[[test]]
name = "bdd"
harness = false

[profile.release]
strip = true
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace]
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
installers = ["shell", "powershell"]
